// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationsSettings/> <TestNotification/> Should toggle unsaved changes warning modal 1`] = `
<div
  id="test-notification"
>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <h2>
      Send Test Notification
    </h2>
    <p>
      Here you can verify whether your SMTP provider or push notifications are configured correctly by sending a test notification.
    </p>
    <div
      class="text-end"
    >
      <button
        class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
        type="button"
      >
        <span>
          Send
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Email notifications Disabled 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates, and new features according to your settings. Once you are done with the configuration, you can test it by pressing Send test notification. Additionally, you can use 
    <a
      href="https://ntfy.sh/"
      rel="noopener noreferrer"
      target="_blank"
    >
      ntfy
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
     to receive real-time push notifications directly to your mobile device or desktop. ntfy allows you to subscribe to topics and get instant alerts without the need for email.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Email Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable email notifications
        </label>
      </div>
      <h2>
        Push Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="10"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="10"
        >
          Enable push notifications
        </label>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  />
  <div
    id="modal-container"
  />
</div>
`;

exports[`<NotificationsSettings/> Email notifications Enabled, smtp_type:custom 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates, and new features according to your settings. Once you are done with the configuration, you can test it by pressing Send test notification. Additionally, you can use 
    <a
      href="https://ntfy.sh/"
      rel="noopener noreferrer"
      target="_blank"
    >
      ntfy
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
     to receive real-time push notifications directly to your mobile device or desktop. ntfy allows you to subscribe to topics and get instant alerts without the need for email.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Email Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable email notifications
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            class="form-check-input me-2"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="form-check-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            checked=""
            class="form-check-input me-2"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="form-check-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <div
          class="form-text"
        >
          <small>
            If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Email address of recipient. Separate multiple addresses by comma.
          </small>
        </div>
      </div>
      <h3>
        SMTP Settings
      </h3>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Sender address (From)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            placeholder="router@example.com"
            required=""
            type="email"
            value="router@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            This is the address notifications are send from.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Server address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            placeholder="example.com"
            required=""
            type="text"
            value="example.com"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Server port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            max="65535"
            min="1"
            type="number"
            value="465"
          />
          <button
            aria-label="Increase value. Hint: Hold to increase faster."
            class="btn btn-outline-secondary"
            title="Increase value. Hint: Hold to increase faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease value. Hint: Hold to decrease faster."
            class="btn btn-outline-secondary"
            title="Decrease value. Hint: Hold to decrease faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Security
        </label>
        <select
          class="form-select"
          id="7"
        >
          <option
            value="none"
          >
            None
          </option>
          <option
            value="ssl"
          >
            SSL
          </option>
          <option
            value="starttls"
          >
            STARTTLS
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            type="text"
            value="root"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="9"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="9"
            type="password"
            value="test_password"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <h2>
        Push Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="10"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="10"
        >
          Enable push notifications
        </label>
      </div>
      <h2>
        General Notification Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="11"
        >
          Importance
        </label>
        <select
          class="form-select"
          id="11"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Depending on the importance or severity of the notification, you can choose to receive notifications about all events or only about those that require your attention.
          </small>
        </div>
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="12"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="12"
        >
          Send news
        </label>
        <div
          class="form-text"
        >
          <small>
            Send notifications about new releases.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        Send Test Notification
      </h2>
      <p>
        Here you can verify whether your SMTP provider or push notifications are configured correctly by sending a test notification.
      </p>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Send
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      aria-labelledby="modal-title"
      aria-modal="true"
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h1
              class="modal-title fs-5"
            >
              Warning!
            </h1>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <p>
              You have unsaved changes in your notification settings. Do you want to discard them and test notifications using the previous settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Confirm
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Email notifications Enabled,smtp_type:turris 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates, and new features according to your settings. Once you are done with the configuration, you can test it by pressing Send test notification. Additionally, you can use 
    <a
      href="https://ntfy.sh/"
      rel="noopener noreferrer"
      target="_blank"
    >
      ntfy
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
     to receive real-time push notifications directly to your mobile device or desktop. ntfy allows you to subscribe to topics and get instant alerts without the need for email.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Email Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable email notifications
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            class="form-check-input me-2"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="form-check-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            checked=""
            class="form-check-input me-2"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="form-check-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <div
          class="form-text"
        >
          <small>
            If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Email address of recipient. Separate multiple addresses by comma.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="13"
        >
          Sender's name
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="13"
            type="text"
            value="turris"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Name of the sender that will be used before the "at" symbol in the email address. For example: "home-router@notify.turis.cz"
          </small>
        </div>
      </div>
      <h2>
        Push Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="10"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="10"
        >
          Enable push notifications
        </label>
      </div>
      <h2>
        General Notification Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="11"
        >
          Importance
        </label>
        <select
          class="form-select"
          id="11"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Depending on the importance or severity of the notification, you can choose to receive notifications about all events or only about those that require your attention.
          </small>
        </div>
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="12"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="12"
        >
          Send news
        </label>
        <div
          class="form-text"
        >
          <small>
            Send notifications about new releases.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        Send Test Notification
      </h2>
      <p>
        Here you can verify whether your SMTP provider or push notifications are configured correctly by sending a test notification.
      </p>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Send
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      aria-labelledby="modal-title"
      aria-modal="true"
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h1
              class="modal-title fs-5"
            >
              Warning!
            </h1>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <p>
              You have unsaved changes in your notification settings. Do you want to discard them and test notifications using the previous settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Confirm
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Push notifications Disabled 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates, and new features according to your settings. Once you are done with the configuration, you can test it by pressing Send test notification. Additionally, you can use 
    <a
      href="https://ntfy.sh/"
      rel="noopener noreferrer"
      target="_blank"
    >
      ntfy
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
     to receive real-time push notifications directly to your mobile device or desktop. ntfy allows you to subscribe to topics and get instant alerts without the need for email.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Email Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable email notifications
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            class="form-check-input me-2"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="form-check-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            checked=""
            class="form-check-input me-2"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="form-check-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <div
          class="form-text"
        >
          <small>
            If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Email address of recipient. Separate multiple addresses by comma.
          </small>
        </div>
      </div>
      <h3>
        SMTP Settings
      </h3>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Sender address (From)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            placeholder="router@example.com"
            required=""
            type="email"
            value="router@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            This is the address notifications are send from.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Server address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            placeholder="example.com"
            required=""
            type="text"
            value="example.com"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Server port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            max="65535"
            min="1"
            type="number"
            value="465"
          />
          <button
            aria-label="Increase value. Hint: Hold to increase faster."
            class="btn btn-outline-secondary"
            title="Increase value. Hint: Hold to increase faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease value. Hint: Hold to decrease faster."
            class="btn btn-outline-secondary"
            title="Decrease value. Hint: Hold to decrease faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Security
        </label>
        <select
          class="form-select"
          id="7"
        >
          <option
            value="none"
          >
            None
          </option>
          <option
            value="ssl"
          >
            SSL
          </option>
          <option
            value="starttls"
          >
            STARTTLS
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            type="text"
            value="root"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="9"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="9"
            type="password"
            value="test_password"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <h2>
        Push Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="10"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="10"
        >
          Enable push notifications
        </label>
      </div>
      <h2>
        General Notification Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="11"
        >
          Importance
        </label>
        <select
          class="form-select"
          id="11"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Depending on the importance or severity of the notification, you can choose to receive notifications about all events or only about those that require your attention.
          </small>
        </div>
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="12"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="12"
        >
          Send news
        </label>
        <div
          class="form-text"
        >
          <small>
            Send notifications about new releases.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        Send Test Notification
      </h2>
      <p>
        Here you can verify whether your SMTP provider or push notifications are configured correctly by sending a test notification.
      </p>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Send
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      aria-labelledby="modal-title"
      aria-modal="true"
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h1
              class="modal-title fs-5"
            >
              Warning!
            </h1>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <p>
              You have unsaved changes in your notification settings. Do you want to discard them and test notifications using the previous settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Confirm
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Push notifications Enabled 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates, and new features according to your settings. Once you are done with the configuration, you can test it by pressing Send test notification. Additionally, you can use 
    <a
      href="https://ntfy.sh/"
      rel="noopener noreferrer"
      target="_blank"
    >
      ntfy
      <sup>
        <i
          class="fa"
        />
      </sup>
    </a>
     to receive real-time push notifications directly to your mobile device or desktop. ntfy allows you to subscribe to topics and get instant alerts without the need for email.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        Email Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          checked=""
          class="form-check-input"
          id="1"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="1"
        >
          Enable email notifications
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            class="form-check-input me-2"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="form-check-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="mb-0 form-check form-check-inline"
        >
          <input
            checked=""
            class="form-check-input me-2"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="form-check-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <div
          class="form-text"
        >
          <small>
            If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Email address of recipient. Separate multiple addresses by comma.
          </small>
        </div>
      </div>
      <h3>
        SMTP Settings
      </h3>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="4"
        >
          Sender address (From)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="4"
            placeholder="router@example.com"
            required=""
            type="email"
            value="router@example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            This is the address notifications are send from.
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="5"
        >
          Server address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="5"
            placeholder="example.com"
            required=""
            type="text"
            value="example.com"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="6"
        >
          Server port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            max="65535"
            min="1"
            type="number"
            value="465"
          />
          <button
            aria-label="Increase value. Hint: Hold to increase faster."
            class="btn btn-outline-secondary"
            title="Increase value. Hint: Hold to increase faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
          <button
            aria-label="Decrease value. Hint: Hold to decrease faster."
            class="btn btn-outline-secondary"
            title="Decrease value. Hint: Hold to decrease faster."
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="7"
        >
          Security
        </label>
        <select
          class="form-select"
          id="7"
        >
          <option
            value="none"
          >
            None
          </option>
          <option
            value="ssl"
          >
            SSL
          </option>
          <option
            value="starttls"
          >
            STARTTLS
          </option>
        </select>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="8"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            type="text"
            value="root"
          />
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="9"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="current-password"
            class="form-control"
            id="9"
            type="password"
            value="test_password"
          />
          <button
            class="input-group-text"
            type="button"
          >
            <i
              class="fa"
            />
          </button>
        </div>
      </div>
      <h2>
        Push Notification Settings
      </h2>
      <div
        class="form-check form-switch mb-3"
      >
        <input
          class="form-check-input"
          id="10"
          role="switch"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="10"
        >
          Enable push notifications
        </label>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="13"
        >
          URL
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="13"
            type="text"
            value="https://example.com"
          />
        </div>
        <div
          class="form-text"
        >
          <small>
            Specify the URL to the ntfy server topic. Example format: https://ntfy.sh/example
          </small>
        </div>
      </div>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="14"
        >
          Priority
        </label>
        <select
          class="form-select"
          id="14"
        >
          <option
            value="max"
          >
            Max
          </option>
          <option
            value="urgent"
          >
            Urgent
          </option>
          <option
            value="high"
          >
            High
          </option>
          <option
            value="default"
          >
            Default
          </option>
          <option
            value="low"
          >
            Low
          </option>
          <option
            value="min"
          >
            Min
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Priority of the push notifications.
          </small>
        </div>
      </div>
      <h2>
        General Notification Settings
      </h2>
      <div
        class="mb-3"
      >
        <label
          class="form-label"
          for="11"
        >
          Importance
        </label>
        <select
          class="form-select"
          id="11"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
        <div
          class="form-text"
        >
          <small>
            Depending on the importance or severity of the notification, you can choose to receive notifications about all events or only about those that require your attention.
          </small>
        </div>
      </div>
      <div
        class="mb-3 form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="12"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="12"
        >
          Send news
        </label>
        <div
          class="form-text"
        >
          <small>
            Send notifications about new releases.
          </small>
        </div>
      </div>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="submit"
        >
          <span>
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <div
      class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
    >
      <h2>
        Send Test Notification
      </h2>
      <p>
        Here you can verify whether your SMTP provider or push notifications are configured correctly by sending a test notification.
      </p>
      <div
        class="text-end"
      >
        <button
          class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
          type="button"
        >
          <span>
            Send
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      aria-labelledby="modal-title"
      aria-modal="true"
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h1
              class="modal-title fs-5"
            >
              Warning!
            </h1>
            <button
              aria-label="Close"
              class="btn-close"
              type="button"
            />
          </div>
          <div
            class="modal-body"
          >
            <p>
              You have unsaved changes in your notification settings. Do you want to discard them and test notifications using the previous settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-secondary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
            <button
              class="btn btn-primary d-inline-flex justify-content-center align-items-center"
              type="button"
            >
              <span>
                Confirm
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
